@@ -1,6 +1,7 @@
 v.1.4.4
 
 - repair station now works like the modify station, button click!
+- repair values in repair station are now much cheaper for low level gear, slowly rising costs as lvl increases
 - added repair kits. They are a way to repair gear on the run. So you dont have to bring a repair station. 
 You power them the same way you powered the repair station before, by filling it with fuel items, though now it's done with crafting screen.
 Then you combine repair kit with your gear, and it repairs it.
